--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ bracket-lib = "0.8.7"
 legion = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8"
+
+[profile.release]
+lto = "thin"
